[project]
name = "pycacheable"
version = "0.2.0"
description = "Decorator de cache para funções e métodos Python, com backends InMemory e SQLite, TTL configurável, hash estável de parâmetros e serialização segura."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Leonardo Pinho", email = "contato@leonardopinho.com" }
]
maintainers = [
  { name = "Leonardo Pinho", email = "contato@leonardopinho.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["cache", "decorator", "sqlite", "python", "performance", "memoization", "caching"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Topic :: Database",
  "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "twine>=5.0.0",
  "ruff>=0.5.0",
  "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/leonardopinho/pycacheable"
Repository = "https://github.com/leonardopinho/pycacheable"
Issues = "https://github.com/leonardopinho/pycacheable/issues"
Changelog = "https://github.com/leonardopinho/pycacheable/blob/main/CHANGES.md"
Documentation = "https://github.com/leonardopinho/pycacheable/blob/main/README.md"
Benchmarks = "https://github.com/leonardopinho/pycacheable/tree/main/benchmarks"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pycacheable*"]
exclude = ["tests", "benchmarks"]

[tool.setuptools]
package-dir = {"" = "src"}
